fixed z-index issue mobile nav

--- a/imports/ui/styles/components/_navMobile.scss
+++ b/imports/ui/styles/components/_navMobile.scss
@@ -4,33 +4,55 @@
 #nav-mobile {
     height: 100%;
     width: 100%;
-    z-index: -1;
 
     #mobile-nav-btn {
         position: fixed;
-        top: 20px;
-        right: 25px;
+        right: 30px;
+        top: 30px;
         z-index: 9999;
-        font-size: 40px;
-        color: white;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
         cursor: pointer;
+        text-align: center;
+        padding: 5px;
+        background: white;
+        font-size: 2em;
     }
 
     .nav-wrapper-mobile {
         position: fixed;
-        z-index: 1;
         height: 100vh;
         width: 100%;
         padding: 0;
 
         .nav-col-mobile {
             background: #18191b;
-            width: 0%;
+            width: 0;
             padding: 0;
             height: 33.333vh;
             display: flex;
             justify-content: center;
             align-items: center;
+
+            .nav-viewports-mobile {
+                .media-box-mobile {
+                    opacity: 0;
+
+                    .menu-link-mobile {
+                        text-decoration: none;
+                        color: white;
+
+                        .menu-title-mobile {
+                            font-size: calc(3em + 6px);
+                            text-align: center;
+                        }
+                        .btm-text {
+                            text-align: center;
+                        }
+                    }
+                }
+            }
         }
     }
 }
